# EgeTelegramBot

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  config.py  config_for_parsing.py  format_data.py  get_data_for_site.py  get_data_for_tests.py  logger_for_project.py  main.py  mypy.ini  parse_ege_tests.py  parse_sites.py  pyproject.toml  requirements.txt  setup.py  start_bot.py  telegram_bot.py  tox.ini  work_with_db.py
.github/workflows/: checks.yaml  tests.yaml
bot_for_tg/: init_for_bot.py  start_bot.py
db/: tasks_for_subjects.db
handlers/: __init__.py  check_response.py  get_data.py  get_data_for_keyboard.py  greeting.py  handlers_for_task.py
keyboards/: __init__.py  btn_back.py  btn_back_home.py  btn_get_task.py  btn_random_task.py  btn_report.py  issues.py  menu.py  subjects.py  subtopics.py
keyboards/get_data_for_keyboard/: get_data_for_subjects.py  get_data_for_telegram_subjects.py
parse_data/: __init__.py  browser_for_parsing.py  config_for_parsing.py  exceptions_for_parsing.py  format_data.py  get_data_for_tests.py  parse_ege_tests.py  typing_for_parsing.py
parse_data/check/: __init__.py  check_data.py  check_data_object.py  (+6 more)
work_with_bot/: __init__.py  init_for_bot.py  start_bot.py
work_with_db/: __init__.py  check_data.py  check_data_db.py  check_existing_db.py  check_tables_db.py  config_for_db.py  create_db_or_tables.py  get_path_db.py  insert_data.py  select_data.py  typing_for_work_with_db.py
work_with_db/get_data/: __init__.py  pyproject.toml  select_data.py
(+50 files in other folders)
